Upgrade to KCache 3.1.2

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <maven.compiler.plugin.version>3.6.2</maven.compiler.plugin.version>
         <jdk.version>1.8</jdk.version>
         <janusgraph.version>0.4.1</janusgraph.version>
+        <kcache.version>3.1.2</kcache.version>
         <dependency.plugin.version>2.10</dependency.plugin.version>
         <test.excluded.groups>MEMORY_TESTS,PERFORMANCE_TESTS,BRITTLE_TESTS,CELL_TTL_TESTS</test.excluded.groups>
         <test.skip.default>false</test.skip.default>
@@ -49,7 +50,7 @@
         <dependency>
             <groupId>io.kcache</groupId>
             <artifactId>kcache</artifactId>
-            <version>3.1.1</version>
+            <version>${kcache.version}</version>
         </dependency>
     </dependencies>
 
