--- a/pom.xml
+++ b/pom.xml
@@ -13,20 +13,14 @@
     <properties>
         <maven.compiler.plugin.version>3.6.2</maven.compiler.plugin.version>
         <jdk.version>1.8</jdk.version>
-        <janusgraph.version>0.4.1</janusgraph.version>
-        <kcache.version>3.1.2</kcache.version>
+        <jackson.version>2.11.1</jackson.version>
+        <janusgraph.version>0.5.2</janusgraph.version>
+        <kcache.version>3.2.1</kcache.version>
         <dependency.plugin.version>2.10</dependency.plugin.version>
         <test.excluded.groups>MEMORY_TESTS,PERFORMANCE_TESTS,BRITTLE_TESTS,CELL_TTL_TESTS</test.excluded.groups>
         <test.skip.default>false</test.skip.default>
         <test.skip.tp>true</test.skip.tp>
     </properties>
-
-    <developers>
-        <developer>
-            <name>Ted Wilmes</name>
-            <email>twilmes@gmail.com</email>
-        </developer>
-    </developers>
 
     <licenses>
         <license>
@@ -51,6 +45,11 @@
             <groupId>io.kcache</groupId>
             <artifactId>kcache</artifactId>
             <version>${kcache.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
     </dependencies>
 
