--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <jackson.version>2.11.1</jackson.version>
         <janusgraph.version>0.5.2</janusgraph.version>
         <kcache.version>3.2.1</kcache.version>
+        <slf4j.version>1.7.30</slf4j.version>
         <dependency.plugin.version>2.10</dependency.plugin.version>
         <test.excluded.groups>MEMORY_TESTS,PERFORMANCE_TESTS,BRITTLE_TESTS,CELL_TTL_TESTS</test.excluded.groups>
         <test.skip.default>false</test.skip.default>
@@ -50,6 +51,17 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>${slf4j.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
