--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -1,12 +1,9 @@
-log4j.appender.A1=org.apache.log4j.FileAppender
-log4j.appender.A1.File=${project.build.directory}/test.log
-log4j.appender.A1.Threshold=ALL
-log4j.appender.A1.layout=org.apache.log4j.PatternLayout
-log4j.appender.A1.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} [%20.20t] %-5p %30.30c: %m%n
+log4j.rootLogger=INFO, stdout
 
-log4j.appender.A2=org.apache.log4j.ConsoleAppender
-log4j.appender.A2.Threshold=ALL
-log4j.appender.A2.layout=org.apache.log4j.PatternLayout
-log4j.appender.A2.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} [%20.20t] %-5p %30.30c: %m%n
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern=[%d] %p %m (%c:%L)%n
 
-log4j.rootLogger=DEBUG, A1, A2
+log4j.logger.kafka=ERROR, stdout
+log4j.logger.org.apache.kafka=ERROR, stdout
+log4j.additivity.kafka.server=false
